samples/_failures_safe/1761468254_dd3ddd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b3a6251.c: In function ‘main’:
./samples/SAFE/__tmp_4b3a6251.c:154:25: error: missing terminating " character
  154 |         fprintf(stderr, "Failed to add nodes\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4b3a6251.c:154:9: error: expected expression at end of input
  154 |         fprintf(stderr, "Failed to add nodes\n
      |         ^~~~~~~
./samples/SAFE/__tmp_4b3a6251.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b3a6251.c:154:9: error: expected declaration or statement at end of input
